posiGen_FullsendBox/src/objects/Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>How much was it?</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descripton__c</fullName>
        <inlineHelpText>What was used.</inlineHelpText>
        <label>Descripton</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <inlineHelpText>Track material expenses here.</inlineHelpText>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>